# NuMagSANS

./: .buildinfo  .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE  MagSANSInput.conf  NuMagSANS  NuMagSANSFacade.py  NuMagSANSInput.conf  NuMagSANSrun.py  README.md  api_references.html  genindex.html  index.html  installation.html  objects.inv  playground.py  pyproject.toml  quickstart.html  search.html  searchindex.js  usage.html
.doctrees/: api_references.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree  usage.doctree
GettingStarted/: DataOrganization.html  Installation.html  ParameterOverview.html  Quickstart.html  RealSpaceDataOrganization.html  SimulationScenarios.html  index.html
NuMagSANS/: NuMagSANS.py  __init__.py
RealSpaceData/: StructureData.csv
RelatedPublications/: index.html
SANSTheory/: FourierTransform.html  HalpernJohnsonVector.html  MagneticField.html  Magnetization.html  index.html
_sources/: index.md.txt  index.rst  installation.rst
_static/: documentation_options.js
api/: dir__home_runner_work_NuMagSANS_NuMagSANS_src_InputData.html  dir__home_runner_work_NuMagSANS_NuMagSANS_src_InputData_MagData.html  dir__home_runner_work_NuMagSANS_NuMagSANS_src_InputData_NucData.html  dir__home_runner_work_NuMagSANS_NuMagSANS_src_InputData_RotData.html  dir__home_runner_work_NuMagSANS_NuMagSANS_src_InputData_StructData.html  dir__home_runner_work_NuMagSANS_NuMagSANS_src_OutputData.html  dir__home_runner_work_NuMagSANS_NuMagSANS_src_OutputData_SANSData.html  dir__home_runner_work_NuMagSANS_NuMagSANS_src_OutputData_SpectralData.html  dir__home_runner_work_NuMagSANS_NuMagSANS_src_gpu_kernels.html  dir__home_runner_work_NuMagSANS_NuMagSANS_src_helper.html  dir__home_runner_work_NuMagSANS_NuMagSANS_src_wrapper.html  dir_src.html  file_src_InputData_MagData_NuMagSANSlib_MagData.h.html  file_src_InputData_MagData_NuMagSANSlib_MagDataExplorer.h.html  file_src_InputData_NuMagSANSlib_InputFileInterpreter.h.html  file_src_InputData_NucData_NuMagSANSlib_NucData.h.html  file_src_InputData_NucData_NuMagSANSlib_NucDataExplorer.h.html  file_src_InputData_RotData_NuMagSANSlib_RotationData.h.html  file_src_InputData_RotData_NuMagSANSlib_RotationDataExplorer.h.html  file_src_InputData_StructData_NuMagSANSlib_StructureData.h.html  file_src_InputData_StructData_NuMagSANSlib_StructureDataExplorer.h.html  file_src_NuMagSANS.cu.html  file_src_NuMagSANSlib.h.html  file_src_NuMagSANSlib_CUDAError.h.html  file_src_NuMagSANSlib_Data.h.html  file_src_NuMagSANSlib_Directory.h.html  file_src_NuMagSANSlib_ExportData.h.html  file_src_NuMagSANSlib_FreeData.h.html  file_src_NuMagSANSlib_HelperFun.h.html  file_src_NuMagSANSlib_InitializeData.h.html  file_src_NuMagSANSlib_InputFileInterpreter.h.html  file_src_NuMagSANSlib_InputFileInterpreter2.h.html  file_src_NuMagSANSlib_KernelPostprocess.h.html  file_src_NuMagSANSlib_KernelSelector.h.html  file_src_NuMagSANSlib_LogFile.h.html  file_src_NuMagSANSlib_MagData.h.html  file_src_NuMagSANSlib_MagDataExplorer.h.html  file_src_NuMagSANSlib_MemoryInfo.h.html  file_src_NuMagSANSlib_NucData.h.html  file_src_NuMagSANSlib_NucDataExplorer.h.html  (+383 more)
docs/: Doxyfile  _config.yml  _toc.yml  api_references.rst  conf.py  index.html  index.md  index.rst  installation.rst  usage.rst
example/: NuMagSANSrun.py
examples/: example_1.html  index.html
playground/: playground1.py
python/: NuMagSANSFacade.py  __init__.py
pythonFacade/: NuMagSANSFacade.py
src/: NuMagSANS  NuMagSANS.cu  NuMagSANSFacade.py  NuMagSANSInput.conf  NuMagSANSInputTemplate.conf  NuMagSANSlib.h  NuMagSANSlib_CUDAError.h  NuMagSANSlib_Data.h  NuMagSANSlib_ExportData.h  NuMagSANSlib_FreeData.h  NuMagSANSlib_InitializeData.h  NuMagSANSlib_InputFileInterpreter.h  NuMagSANSlib_InputFileInterpreter2.h  NuMagSANSlib_KernelPostprocess.h  NuMagSANSlib_KernelSelector.h  NuMagSANSlib_LogFile.h  NuMagSANSlib_MagData.h  NuMagSANSlib_MagDataExplorer.h  NuMagSANSlib_MagDataObserver.h  NuMagSANSlib_MemoryInfo.h  NuMagSANSlib_NucData.h  NuMagSANSlib_NucDataExplorer.h  NuMagSANSlib_NucDataObserver.h  NuMagSANSlib_ReadWrite.h  NuMagSANSlib_RotationData.h  NuMagSANSlib_RotationDataExplorer.h  NuMagSANSlib_SANSData.h  NuMagSANSlib_SpectralData.h  NuMagSANSlib_StringCompare.h  NuMagSANSlib_StructureData.h  NuMagSANSlib_gpuKernel.h  (+1 more)
(+1138 files in other folders)
