[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "NuMagSANS"
version = "0.1.0"
description = "NuMagSANS GPU-accelerated SANS computation toolkit"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = [
    "build",
    "dist",
    ".venv",
    "NuMagSANS_Output",
    "RealSpaceData",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
