[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "NuMagSANS"
version = "0.1.0"
description = "NuMagSANS GPU-accelerated SANS computation toolkit"
requires-python = ">=3.10"
dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
    "scipy",
    "sympy",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff==0.15.17",
]
visualization = [
    "pyvista",
]
tutorials = [
    "pyvista",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = [
    "build",
    "dist",
    ".venv",
    "NuMagSANS_Output",
    "RealSpaceData",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
